2008-10-26  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_cntrparam): Allow iterative addition to the list of
	contour levels:     set for [i=1:N:inc] cntr level discrete i

	* src/graph3d.c (check_for_variable_color) src/misc.c (lp_parse) 
	src/graphics.c (check_for_variable_color) plot3d.c (get_3ddata):
	New colorspec:   'lc variable'
	Read linestyle index from data column, look up corresponding color.

2008-10-16  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.539

2008-10-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_polygon): Do not clip polygon edges to the graph
	borders if the vertices are all given in screen coordinates.  Without
	this change, you cannot draw polygons outside of the graph.

2008-10-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_objects do_rectangle): Break out the rectangle
	drawing code into a separate routine.

2008-10-13  Ethan Merritt  <merritt@u.washington.edu>

	* src/wxterminal/wxt_gui.cpp (wxtFrame::wxtFrame):
	Revert call to OnSize() that caused compile failure on linux.
	Bug #2159025

2008-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Explicitly set default color of first
	histogram to linestyle/linetype 0.
	Bug #2155287

2008-10-11  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: Document restriction on option order: "title
	<column>" must come immediately after "using".

2008-10-11  James R. Van Zandt  <jrvz@comcast.net>

	* docs/gnuplot.doc: "help datastrings": The "first item" would
	usually be called a "column heading". Add some
	cross-references. "help label": see also "labels". "help data":
	see also "labels". "help plot title": mention getting title from
	column heading, and link to "datastrings".

2008-10-11  Michael Goffioul  <michael.goffioul@gmail.com>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Define rint for MSVC.